<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_km"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_per_liter"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kms_per_liter"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_spend"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_value"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textColor="@color/purple_700"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:backgroundTint="@color/teal_200"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        android:textSize="20sp"/>


</LinearLayout>